@@ -30,11 +30,10 @@ import jdk.internal.vm.annotation.NullRestricted;
 /*
  * @test BlackholeTest
  * @summary Check that blackholes work with inline types
- * @compile --add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED
- *          --add-exports java.base/jdk.internal.value=ALL-UNNAMED BlackholeTest.java
- * @run main/othervm -XX:+EnableValhalla
- *      --add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED
- *      --add-exports java.base/jdk.internal.value=ALL-UNNAMED
+ * @enablePreview
+ * @modules java.base/jdk.internal.value
+ *          java.base/jdk.internal.vm.annotation
+ * @run main/othervm
  *      -Xbatch -XX:+UnlockExperimentalVMOptions
  *      -XX:CompileCommand=blackhole,compiler/valhalla/inlinetypes/BlackholeTest.blackhole
  *      compiler.valhalla.inlinetypes.BlackholeTest
