@@ -50,11 +50,11 @@ import static compiler.valhalla.inlinetypes.InlineTypes.*;
  * @summary Test inline types in LWorld.
  * @library /test/lib /test/jdk/lib/testlibrary/bytecode /test/jdk/java/lang/invoke/common /
  * @requires (os.simpleArch == "x64" | os.simpleArch == "aarch64")
+ * @enablePreview
  * @modules java.base/jdk.internal.value
+ *          java.base/jdk.internal.vm.annotation
  * @build jdk.experimental.bytecode.BasicClassBuilder test.java.lang.invoke.lib.OldInstructionHelper
- * @compile --add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED
- *          --add-exports java.base/jdk.internal.value=ALL-UNNAMED TestLWorld.java
- * @run main/othervm/timeout=450 -XX:+EnableValhalla --enable-preview compiler.valhalla.inlinetypes.TestLWorld
+ * @run main/othervm/timeout=450 compiler.valhalla.inlinetypes.TestLWorld
  */
 
 @ForceCompileClassInitializer
@@ -205,7 +205,7 @@ public class TestLWorld {
     public Object test3(int state) {
         Object res = null;
         if (state == 0) {
-            res = Integer.valueOf(rI);
+            res = new NonValueClass(rI);
         } else if (state == 1) {
             res = MyValue1.createWithFieldsInline(rI, rL);
         } else if (state == 2) {
@@ -229,7 +229,7 @@ public class TestLWorld {
         objectField1 = valueField1;
         Object result = null;
         result = test3(0);
-        Asserts.assertEQ((Integer)result, rI);
+        Asserts.assertEQ(((NonValueClass)result).x, rI);
         result = test3(1);
         Asserts.assertEQ(((MyValue1)result).hash(), hash());
         result = test3(2);
@@ -249,9 +249,9 @@ public class TestLWorld {
     // Test merging inline types and objects in loops
     @Test
     public Object test4(int iters) {
-        Object res = Integer.valueOf(rI);
+        Object res = new NonValueClass(rI);
         for (int i = 0; i < iters; ++i) {
-            if (res instanceof Integer) {
+            if (res instanceof NonValueClass) {
                 res = MyValue1.createWithFieldsInline(rI, rL);
             } else {
                 res = MyValue1.createWithFieldsInline(((MyValue1)res).x + 1, rL);
@@ -262,8 +262,8 @@ public class TestLWorld {
 
     @Run(test = "test4")
     public void test4_verifier() {
-        Integer result1 = (Integer)test4(0);
-        Asserts.assertEQ(result1, rI);
+        NonValueClass result1 = (NonValueClass)test4(0);
+        Asserts.assertEQ(result1.x, rI);
         int iters = (Math.abs(rI) % 10) + 1;
         MyValue1 result2 = (MyValue1)test4(iters);
         MyValue1 vt = MyValue1.createWithFieldsInline(rI + iters - 1, rL);
@@ -554,10 +554,6 @@ public class TestLWorld {
         MyInterface vt2 = MyValue1.createWithFieldsDontInline(rI, rL);
         MyInterface vt3 = arg;
         MyInterface vt4 = valueField1;
-        if (deopt) {
-            // uncommon trap
-            TestFramework.deoptimize(m);
-        }
         return ((MyValue1)vt1).hash() + ((MyValue1)vt2).hash() +
                ((MyValue1)vt3).hash() + ((MyValue1)vt4).hash();
     }
@@ -601,7 +597,7 @@ public class TestLWorld {
     @Run(test = "test17")
     public void test17_verifier() {
         MyValue1 vt = testValue1;
-        MyValue1 result = test17(vt, Integer.valueOf(rI));
+        MyValue1 result = test17(vt, new NonValueClass(rI));
         Asserts.assertEquals(result.hash(), vt.hash());
     }
 
@@ -647,7 +643,7 @@ public class TestLWorld {
         }
         Object obj = vt;
         try {
-            Integer i = (Integer)obj;
+            NonValueClass i = (NonValueClass)obj;
             throw new RuntimeException("ClassCastException expected");
         } catch (ClassCastException e) {
             // Expected
@@ -679,7 +675,7 @@ public class TestLWorld {
         }
     }
 
-    private static final Integer[] testIntegerArray = new Integer[42];
+    private static final NonValueClass[] testNonValueArray = new NonValueClass[42];
 
     // Test load from (flattened) inline type array disguised as object array
     @Test
@@ -758,7 +754,7 @@ public class TestLWorld {
     public void test24_verifier() {
         int index = Math.abs(rI) % 3;
         try {
-            test24(testIntegerArray, testValue1, index);
+            test24(testNonValueArray, testValue1, index);
             throw new RuntimeException("No ArrayStoreException thrown");
         } catch (ArrayStoreException e) {
             // Expected
@@ -945,7 +941,7 @@ public class TestLWorld {
     public void test30_verifier() {
         int index = Math.abs(rI) % 3;
         try {
-            test30(testIntegerArray, testValue1, index);
+            test30(testNonValueArray, testValue1, index);
             throw new RuntimeException("No ArrayStoreException thrown");
         } catch (ArrayStoreException e) {
             // Expected
@@ -1197,7 +1193,7 @@ public class TestLWorld {
             result = testValue2Array;
             break;
         case 4:
-            result = testIntegerArray;
+            result = testNonValueArray;
             break;
         case 5:
             result = null;
@@ -1269,7 +1265,7 @@ public class TestLWorld {
             result = testValue2Array;
             break;
         case 4:
-            result = testIntegerArray;
+            result = testNonValueArray;
             break;
         case 5:
             result = null;
@@ -1284,7 +1280,7 @@ public class TestLWorld {
             result = MyValue1.createWithFieldsInline(rI, rL);
             break;
         case 9:
-            result = Integer.valueOf(42);
+            result = new NonValueClass(42);
             break;
         case 10:
             result = testValue1Array2;
@@ -1331,7 +1327,7 @@ public class TestLWorld {
         result = test39(null, testValue1, index, index, 8);
         Asserts.assertEQ(((MyValue1)result).hash(), testValue1.hash());
         result = test39(null, testValue1, index, index, 9);
-        Asserts.assertEQ(((Integer)result), 42);
+        Asserts.assertEQ(((NonValueClass)result).x, 42);
         result = test39(null, testValue1Array, index, index, 10);
         Asserts.assertEQ(((MyValue1[][])result)[index][index].hash(), testValue1.hash());
     }
@@ -1553,8 +1549,7 @@ public class TestLWorld {
 
     @Run(test = "test50")
     public void test50_verifier() {
-        boolean result = test49(Integer.valueOf(42));
-        Asserts.assertFalse(result);
+        Asserts.assertFalse(test49(new NonValueClass(42)));
     }
 
     // Inline type with some non-flattened fields
@@ -1739,7 +1734,7 @@ public class TestLWorld {
         try {
             test56(testValue1);
             throw new RuntimeException("test56 failed: no exception thrown");
-        } catch (IllegalMonitorStateException ex) {
+        } catch (IdentityException ex) {
             // Expected
         }
     }
@@ -1762,7 +1757,7 @@ public class TestLWorld {
         try {
             test57(testValue1);
             throw new RuntimeException("test57 failed: no exception thrown");
-        } catch (IllegalMonitorStateException ex) {
+        } catch (IdentityException ex) {
             // Expected
         }
     }
@@ -1786,7 +1781,7 @@ public class TestLWorld {
         try {
             test58();
             throw new RuntimeException("test58 failed: no exception thrown");
-        } catch (IllegalMonitorStateException ex) {
+        } catch (IdentityException ex) {
             // Expected
         }
     }
@@ -1808,7 +1803,7 @@ public class TestLWorld {
         try {
             test59(new Object(), true);
             throw new RuntimeException("test59 failed: no exception thrown");
-        } catch (IllegalMonitorStateException ex) {
+        } catch (IdentityException ex) {
             // Expected
         }
     }
@@ -1827,18 +1822,18 @@ public class TestLWorld {
         try {
             test60(false);
             throw new RuntimeException("test60 failed: no exception thrown");
-        } catch (IllegalMonitorStateException ex) {
+        } catch (IdentityException ex) {
             // Expected
         }
         try {
             test60(true);
             throw new RuntimeException("test60 failed: no exception thrown");
-        } catch (IllegalMonitorStateException ex) {
+        } catch (IdentityException ex) {
             // Expected
         }
     }
 
-    // Test catching the IllegalMonitorStateException in compiled code
+    // Test catching the IdentityException in compiled code
     @Test
     public void test61(Object vt) {
         boolean thrown = false;
@@ -1846,7 +1841,7 @@ public class TestLWorld {
             synchronized (vt) {
                 throw new RuntimeException("test61 failed: no exception thrown");
             }
-        } catch (IllegalMonitorStateException ex) {
+        } catch (IdentityException ex) {
             thrown = true;
         }
         if (!thrown) {
@@ -1863,7 +1858,7 @@ public class TestLWorld {
     public void test62(Object o) {
         try {
             synchronized (o) { }
-        } catch (IllegalMonitorStateException ex) {
+        } catch (IdentityException ex) {
             // Expected
             return;
         }
@@ -1885,7 +1880,7 @@ public class TestLWorld {
     public void test63_verifier() {
         try {
             test63(testValue1);
-        } catch (IllegalMonitorStateException ex) {
+        } catch (IdentityException ex) {
             // Expected
             return;
         }
@@ -1962,15 +1957,16 @@ public class TestLWorld {
     }
 
     @Test
-    public void test68(Object[] array, Integer o) {
+    public void test68(Object[] array, NonValueClass o) {
         array[0] = o;
     }
 
     @Run(test = "test68")
     public void test68_verifier() {
-        Integer[] array = new Integer[1];
-        test68(array, 1);
-        Asserts.assertEQ(array[0], Integer.valueOf(1));
+        NonValueClass[] array = new NonValueClass[1];
+        NonValueClass obj = new NonValueClass(1);
+        test68(array, obj);
+        Asserts.assertEQ(array[0], obj);
     }
 
     // Test convertion between an inline type and java.lang.Object without an allocation
@@ -2128,7 +2124,7 @@ public class TestLWorld {
         Object[] arr = va;
         for (int i = 0; i < 10; i++) {
             arr = next;
-            next = new Integer[1];
+            next = new NonValueClass[1];
         }
         return arr[0];
     }
@@ -2138,7 +2134,7 @@ public class TestLWorld {
         test75(42);
     }
 
-    // Casting an Integer to a (non-nullable) inline type should throw a ClassCastException
+    // Casting an NonValueClass to a inline type should throw a ClassCastException
     @ForceInline
     public MyValue1 test77_helper(Object o) {
         return (MyValue1)o;
@@ -2146,14 +2142,14 @@ public class TestLWorld {
 
     @Test
     @IR(failOn = {ALLOC_G})
-    public MyValue1 test77(Integer i) throws Throwable {
-        return test77_helper(i);
+    public MyValue1 test77(NonValueClass obj) throws Throwable {
+        return test77_helper(obj);
     }
 
     @Run(test = "test77")
     public void test77_verifier() throws Throwable {
         try {
-            test77(Integer.valueOf(42));
+            test77(new NonValueClass(42));
             throw new RuntimeException("ClassCastException expected");
         } catch (ClassCastException e) {
             // Expected
@@ -2162,7 +2158,7 @@ public class TestLWorld {
         }
     }
 
-    // Casting a null Integer to a nullable inline type should not throw
+    // Casting a null NonValueClass to a nullable inline type should not throw
     @ForceInline
     public MyValue1 test78_helper(Object o) {
         return (MyValue1)o;
@@ -2170,8 +2166,8 @@ public class TestLWorld {
 
     @Test
     @IR(failOn = {ALLOC_G})
-    public MyValue1 test78(Integer i) throws Throwable {
-        return test78_helper(i);
+    public MyValue1 test78(NonValueClass obj) throws Throwable {
+        return test78_helper(obj);
     }
 
     @Run(test = "test78")
@@ -2183,7 +2179,7 @@ public class TestLWorld {
         }
     }
 
-    // Casting an Integer to a nullable inline type should throw a ClassCastException
+    // Casting an NonValueClass to a nullable inline type should throw a ClassCastException
     @ForceInline
     public MyValue1 test79_helper(Object o) {
         return (MyValue1)o;
@@ -2191,14 +2187,14 @@ public class TestLWorld {
 
     @Test
     @IR(failOn = {ALLOC_G})
-    public MyValue1 test79(Integer i) throws Throwable {
-        return test79_helper(i);
+    public MyValue1 test79(NonValueClass obj) throws Throwable {
+        return test79_helper(obj);
     }
 
     @Run(test = "test79")
     public void test79_verifier() throws Throwable {
         try {
-            test79(Integer.valueOf(42));
+            test79(new NonValueClass(42));
             throw new RuntimeException("ClassCastException expected");
         } catch (ClassCastException e) {
             // Expected
@@ -2463,23 +2459,23 @@ public class TestLWorld {
 
     @Test
     public boolean test89(Object obj) {
-        return obj.getClass() == Integer.class;
+        return obj.getClass() == NonValueClass.class;
     }
 
     @Run(test = "test89")
     public void test89_verifier() {
-        Asserts.assertTrue(test89(Integer.valueOf(42)));
+        Asserts.assertTrue(test89(new NonValueClass(42)));
         Asserts.assertFalse(test89(new Object()));
     }
 
     @Test
-    public Integer test90(Object obj) {
-        return (Integer)obj;
+    public NonValueClass test90(Object obj) {
+        return (NonValueClass)obj;
     }
 
     @Run(test = "test90")
     public void test90_verifier() {
-        test90(Integer.valueOf(42));
+        test90(new NonValueClass(42));
         try {
             test90(new Object());
             throw new RuntimeException("ClassCastException expected");
@@ -2523,16 +2519,17 @@ public class TestLWorld {
             }
         }
 
-        return (Integer)array[0];
+        return (NonValueClass)array[0];
     }
 
     @Run(test = "test92")
     @Warmup(10000)
     public void test92_verifier() {
         Object[] array = new Object[1];
-        array[0] = 0x42;
+        Object obj = new NonValueClass(rI);
+        array[0] = obj;
         Object result = test92(array);
-        Asserts.assertEquals(result, 0x42);
+        Asserts.assertEquals(result, obj);
     }
 
     // If the class check succeeds, the flattened array check that
@@ -2545,7 +2542,7 @@ public class TestLWorld {
             }
         }
 
-        Object v = (Integer)array[0];
+        Object v = (NonValueClass)array[0];
         return v;
     }
 
@@ -2554,9 +2551,9 @@ public class TestLWorld {
     public void test93_verifier(RunInfo info) {
         if (info.isWarmUp()) {
             Object[] array = new Object[1];
-            array[0] = 0x42;
+            array[0] = new NonValueClass(42);
             Object result = test93(array);
-            Asserts.assertEquals(result, 0x42);
+            Asserts.assertEquals(((NonValueClass)result).x, 42);
         } else {
             Object[] array = (Test92Value[])ValueClass.newNullRestrictedArray(Test92Value.class, 1);
             Method m = info.getTest();
@@ -2586,7 +2583,7 @@ public class TestLWorld {
         int res = 0;
         for (int i = 1; i < 4; i *= 2) {
             Object v = array[i];
-            res += (Integer)v;
+            res += ((NonValueClass)v).x;
         }
         return res;
     }
@@ -2595,12 +2592,13 @@ public class TestLWorld {
     @Warmup(10000)
     public void test94_verifier() {
         Object[] array = new Object[4];
-        array[0] = 0x42;
-        array[1] = 0x42;
-        array[2] = 0x42;
-        array[3] = 0x42;
+        Object obj = new NonValueClass(rI);
+        array[0] = obj;
+        array[1] = obj;
+        array[2] = obj;
+        array[3] = obj;
         int result = test94(array);
-        Asserts.assertEquals(result, 0x42 * 2);
+        Asserts.assertEquals(result, rI * 2);
     }
 
     @Test
@@ -3180,9 +3178,8 @@ public class TestLWorld {
     }
 
     @Test
-// TODO 8293541
-//    @IR(failOn = {ALLOC_G, MEMBAR},
-//        counts = {PREDICATE_TRAP, "= 1"})
+    @IR(failOn = {ALLOC_G, MEMBAR},
+        counts = {PREDICATE_TRAP, "= 1"})
     @IR(failOn = {ALLOC_G, MEMBAR})
     public long test109_sharp() {
         long res = 0;
@@ -3219,9 +3216,8 @@ public class TestLWorld {
     }
 
     @Test
-// TODO 8293541
-//    @IR(failOn = {ALLOC_G, MEMBAR},
-//        counts = {PREDICATE_TRAP, "= 1"})
+    @IR(failOn = {ALLOC_G, MEMBAR},
+        counts = {PREDICATE_TRAP, "= 1"})
     @IR(failOn = {ALLOC_G, MEMBAR})
     public long test110_sharp() {
         long res = 0;
@@ -3311,9 +3307,8 @@ public class TestLWorld {
     }
 
     @Test
-    @IR(failOn = {ALLOC_G, MEMBAR})
-        // TODO 8326401
-        // counts = {PREDICATE_TRAP, "= 1"})
+    @IR(failOn = {ALLOC_G, MEMBAR},
+        counts = {PREDICATE_TRAP, "= 1"})
     public long test113_sharp() {
         long res = 0;
         for (int i = 0; i < lArr.length; i++) {
@@ -3602,17 +3597,18 @@ public class TestLWorld {
     // not to be a value type
     @Test
     @IR(failOn = SUBSTITUTABILITY_TEST)
-    public boolean test124(Integer o1, Object o2) {
+    public boolean test124(NonValueClass o1, Object o2) {
         return o1 == o2;
     }
 
     @Run(test = "test124")
     public void test124_verifier() {
-        test124(42, 42);
-        test124(42, testValue1);
+        NonValueClass obj = new NonValueClass(rI);
+        test124(obj, obj);
+        test124(obj, testValue1);
     }
 
-    // acmp doesn't need substitutability test when one input null
+    // acmp doesn't need substitutability test when one input is null
     @Test
     @IR(failOn = {SUBSTITUTABILITY_TEST})
     public boolean test125(Object o1) {
@@ -3774,7 +3770,7 @@ public class TestLWorld {
         try {
             test130();
             throw new RuntimeException("test130 failed: no exception thrown");
-        } catch (IllegalMonitorStateException ex) {
+        } catch (IdentityException ex) {
             // Expected
         }
     }
@@ -3799,7 +3795,7 @@ public class TestLWorld {
         try {
             test131();
             throw new RuntimeException("test131 failed: no exception thrown");
-        } catch (IllegalMonitorStateException ex) {
+        } catch (IdentityException ex) {
             // Expected
         }
     }
@@ -3809,7 +3805,7 @@ public class TestLWorld {
     @IR(failOn = {ALLOC, LOAD, STORE})
     public void test132() {
         MyValue2 vt = MyValue2.createWithFieldsInline(rI, rD);
-        Object obj = Integer.valueOf(42);
+        Object obj = new NonValueClass(42);
 
         int limit = 2;
         for (; limit < 4; limit *= 2);
@@ -3827,7 +3823,7 @@ public class TestLWorld {
         try {
             test132();
             throw new RuntimeException("test132 failed: no exception thrown");
-        } catch (IllegalMonitorStateException ex) {
+        } catch (IdentityException ex) {
             // Expected
         }
     }
@@ -3835,7 +3831,7 @@ public class TestLWorld {
     // Test conditional locking on inline type and non-escaping object
     @Test
     public void test133(boolean b) {
-        Object obj = b ? Integer.valueOf(42) : MyValue2.createWithFieldsInline(rI, rD);
+        Object obj = b ? new NonValueClass(rI) : MyValue2.createWithFieldsInline(rI, rD);
         synchronized (obj) {
             if (!b) {
                 throw new RuntimeException("test133 failed: synchronization on inline type should not succeed");
@@ -3849,7 +3845,7 @@ public class TestLWorld {
         try {
             test133(false);
             throw new RuntimeException("test133 failed: no exception thrown");
-        } catch (IllegalMonitorStateException ex) {
+        } catch (IdentityException ex) {
             // Expected
         }
     }
@@ -3872,7 +3868,7 @@ public class TestLWorld {
         try {
             test134(true);
             throw new RuntimeException("test134 failed: no exception thrown");
-        } catch (IllegalMonitorStateException ex) {
+        } catch (IdentityException ex) {
             // Expected
         }
     }
@@ -4147,7 +4143,7 @@ public class TestLWorld {
         Asserts.assertEquals(test150(), testValue2.hash());
     }
 
-// TODO 8325106 This triggers #  assert(false) failed: Should have been buffered
+// TODO 8336003 This triggers #  assert(false) failed: Should have been buffered
 /*
     // Same as test150 but with val not being allocated in the scope of the method
     @Test
@@ -4177,6 +4173,7 @@ public class TestLWorld {
         public int val();
     }
 
+    @ImplicitlyConstructible
     static abstract value class MyAbstract2 implements MyInterface2 {
 
     }
@@ -4349,7 +4346,7 @@ public class TestLWorld {
 
     // Verify that cast that with incompatible types is properly handled
     @Test
-    public void test160(Integer arg) {
+    public void test160(NonValueClass arg) {
         Object tmp = arg;
         MyValue1 res = (MyValue1)tmp;
     }
@@ -4358,11 +4355,144 @@ public class TestLWorld {
     @Warmup(10000)
     public void test160_verifier(RunInfo info) {
         try {
-            test160(42);
+            test160(new NonValueClass(42));
             throw new RuntimeException("No CCE thrown");
         } catch (ClassCastException e) {
             // Expected
         }
         test160(null);
+    }
+
+    abstract value static class AbstractValueClassSingleSubclass {
+    }
+
+    value static class UniqueValueSubClass extends AbstractValueClassSingleSubclass {
+        int x = 34;
+    }
+
+    static AbstractValueClassSingleSubclass abstractValueClassSingleSubclass = new UniqueValueSubClass();
+
+    @Test
+    public void testUniqueConcreteValueSubKlass(boolean flag) {
+        // C2 should recognize that even though we do not know the exact layout of the underlying inline type of the
+        // abstract field abstractValueClassSingleSubclass (i.e. cannot scalarize), we only have a unique concrete sub
+        // class from which we know at compile time whether it can be scalarized or not. This unique sub class
+        // optimization was missing, resulting in a missing InlineTypeNode assertion failure.
+        doNothing(abstractValueClassSingleSubclass, flag ? 23 : 34);
+    }
+
+    void doNothing(Object a, int i) {}
+
+    @Run(test = "testUniqueConcreteValueSubKlass")
+    public void testUniqueConcreteValueSubKlass_verifier() {
+        testUniqueConcreteValueSubKlass(true);
+    }
+
+    static value class MyValueContainer {
+        private final Object value;
+
+        private MyValueContainer(Object value) {
+            this.value = value;
+        }
+    }
+
+    static value class MyValue161 {
+        int x = 0;
+    }
+
+    // Test merging value classes with Object fields
+    @Test
+    public MyValueContainer test161(boolean b) {
+        MyValueContainer res = b ? new MyValueContainer(new MyValue161()) : null;
+        // Cast to verify that merged values are of correct type
+        Object obj = b ? (MyValue161)res.value : null;
+        return res;
+    }
+
+    @Run(test = "test161")
+    public void test161_verifier() {
+        Asserts.assertEquals(test161(true), new MyValueContainer(new MyValue161()));
+        Asserts.assertEquals(test161(false), null);
+    }
+
+    @Test
+    public MyValueContainer test162(boolean b) {
+        MyValueContainer res = b ? null : new MyValueContainer(new MyValue161());
+        // Cast to verify that merged values are of correct type
+        Object obj = b ? null : (MyValue161)res.value;
+        return res;
+    }
+
+    @Run(test = "test162")
+    public void test162_verifier() {
+        Asserts.assertEquals(test162(true), null);
+        Asserts.assertEquals(test162(false), new MyValueContainer(new MyValue161()));
+    }
+
+    @Test
+    public MyValueContainer test163(boolean b) {
+        MyValueContainer res = b ? new MyValueContainer(new MyValue161()) : new MyValueContainer(null);
+        // Cast to verify that merged values are of correct type
+        Object obj = b ? (MyValue161)res.value : (MyValue161)res.value;
+        return res;
+    }
+
+    @Run(test = "test163")
+    public void test163_verifier() {
+        Asserts.assertEquals(test163(true), new MyValueContainer(new MyValue161()));
+        Asserts.assertEquals(test163(false), new MyValueContainer(null));
+    }
+
+    @Test
+    public MyValueContainer test164(boolean b) {
+        MyValueContainer res = b ? new MyValueContainer(null) : new MyValueContainer(new MyValue161());
+        // Cast to verify that merged values are of correct type
+        Object obj = b ? (MyValue161)res.value : (MyValue161)res.value;
+        return res;
+    }
+
+    @Run(test = "test164")
+    public void test164_verifier() {
+        Asserts.assertEquals(test164(true), new MyValueContainer(null));
+        Asserts.assertEquals(test164(false), new MyValueContainer(new MyValue161()));
+    }
+
+    @Test
+    public MyValueContainer test165(boolean b) {
+        MyValueContainer res = b ? new MyValueContainer(new MyValue161()) : new MyValueContainer(42);
+        // Cast to verify that merged values are of correct type
+        Object obj = b ? (MyValue161)res.value : (Integer)res.value;
+        return res;
+    }
+
+    @Run(test = "test165")
+    public void test165_verifier() {
+        Asserts.assertEquals(test165(true), new MyValueContainer(new MyValue161()));
+        Asserts.assertEquals(test165(false), new MyValueContainer(42));
+    }
+
+    @Test
+    public MyValueContainer test166(boolean b) {
+        MyValueContainer res = b ? new MyValueContainer(42) : new MyValueContainer(new MyValue161());
+        // Cast to verify that merged values are of correct type
+        Object obj = b ? (Integer)res.value : (MyValue161)res.value;
+        return res;
+    }
+
+    @Run(test = "test166")
+    public void test166_verifier() {
+        Asserts.assertEquals(test166(true), new MyValueContainer(42));
+        Asserts.assertEquals(test166(false), new MyValueContainer(new MyValue161()));
+    }
+
+    // Verify that monitor information in JVMState is correct at method exit
+    @Test
+    public synchronized Object test167() {
+        return MyValue1.createWithFieldsInline(rI, rL); // Might trigger buffering which requires JVMState
+    }
+
+    @Run(test = "test167")
+    public void test167_verifier() {
+        Asserts.assertEquals(((MyValue1)test167()).hash(), hash());
     }
 }
