@@ -27,11 +27,9 @@
  * @bug 8303416
  * @summary Fix JVM crash at Unsafe_FinishPrivateBuffer
  * @library /test/lib
- * @compile --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
- *          TestLarvalState.java
- * @run main/othervm -XX:+EnableValhalla
- *                   --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
- *                   compiler.valhalla.inlinetypes.TestLarvalState
+ * @enablePreview
+ * @modules java.base/jdk.internal.misc
+ * @run main/othervm compiler.valhalla.inlinetypes.TestLarvalState
  */
 
 package compiler.valhalla.inlinetypes;
