@@ -26,6 +26,7 @@
  *
  * @test
  * @bug 8287136 8292630 8279368 8287136 8287770 8279840 8279672 8292753 8287763 8279901 8287767 8293183 8293120
+ *      8329345
  * @summary Negative compilation tests, and positive compilation (smoke) tests for Value Objects
  * @library /lib/combo /tools/lib
  * @modules
@@ -73,18 +74,7 @@ class ValueObjectCompilationTests extends CompilationTestCase {
 
     public ValueObjectCompilationTests() {
         setDefaultFilename("ValueObjectsTest.java");
-    }
-
-    @Test
-    void testAbstractValueClassConstraints() {
-        assertFail("compiler.err.mod.not.allowed.here",
-                """
-                abstract value class V {
-                    synchronized void foo() {
-                     // Error, abstract value class may not declare a synchronized instance method.
-                    }
-                }
-                """);
+        setCompileOptions(PREVIEW_OPTIONS);
     }
 
     @Test
@@ -115,25 +105,120 @@ class ValueObjectCompilationTests extends CompilationTestCase {
                 """);
     }
 
+    record TestData(String message, String snippet, String[] compilerOptions, boolean testLocalToo) {
+        TestData(String snippet) {
+            this("", snippet, null, true);
+        }
+
+        TestData(String snippet, boolean testLocalToo) {
+            this("", snippet, null, testLocalToo);
+        }
+
+        TestData(String message, String snippet) {
+            this(message, snippet, null, true);
+        }
+
+        TestData(String snippet, String[] compilerOptions) {
+            this("", snippet, compilerOptions, true);
+        }
+
+        TestData(String message, String snippet, String[] compilerOptions) {
+            this(message, snippet, compilerOptions, true);
+        }
+
+        TestData(String message, String snippet, boolean testLocalToo) {
+            this(message, snippet, null, testLocalToo);
+        }
+    }
+
+    private void testHelper(List<TestData> testDataList) {
+        String ttt =
+                """
+                    class TTT {
+                        void m() {
+                            #LOCAL
+                        }
+                    }
+                """;
+        for (TestData td : testDataList) {
+            String localSnippet = ttt.replace("#LOCAL", td.snippet);
+            String[] previousOptions = getCompileOptions();
+            try {
+                if (td.compilerOptions != null) {
+                    setCompileOptions(td.compilerOptions);
+                }
+                if (td.message == "") {
+                    assertOK(td.snippet);
+                    if (td.testLocalToo) {
+                        assertOK(localSnippet);
+                    }
+                } else if (td.message.startsWith("compiler.err")) {
+                    assertFail(td.message, td.snippet);
+                    if (td.testLocalToo) {
+                        assertFail(td.message, localSnippet);
+                    }
+                } else {
+                    assertOKWithWarning(td.message, td.snippet);
+                    if (td.testLocalToo) {
+                        assertOKWithWarning(td.message, localSnippet);
+                    }
+                }
+            } finally {
+                setCompileOptions(previousOptions);
+            }
+        }
+    }
+
+    private static final List<TestData> superClassConstraints = List.of(
+            new TestData(
+                    "compiler.err.super.class.method.cannot.be.synchronized",
+                    """
+                    abstract class I {
+                        synchronized void foo() {}
+                    }
+                    value class V extends I {}
+                    """
+            ),
+            new TestData(
+                    "compiler.err.concrete.supertype.for.value.class",
+                    """
+                    class ConcreteSuperType {
+                        static abstract value class V extends ConcreteSuperType {}  // Error: concrete super.
+                    }
+                    """
+            ),
+            new TestData(
+                    """
+                    value record Point(int x, int y) {}
+                    """
+            ),
+            new TestData(
+                    """
+                    value class One extends Number {
+                        public int intValue() { return 0; }
+                        public long longValue() { return 0; }
+                        public float floatValue() { return 0; }
+                        public double doubleValue() { return 0; }
+                    }
+                    """
+            ),
+            new TestData(
+                    """
+                    value class V extends Object {}
+                    """
+            ),
+            new TestData(
+                    "compiler.err.value.type.has.identity.super.type",
+                    """
+                    abstract class A {}
+                    value class V extends A {}
+                    """
+            )
+    );
+
     @Test
     void testSuperClassConstraints() {
-        assertFail("compiler.err.super.class.method.cannot.be.synchronized",
-                """
-                abstract class I {
-                    synchronized void foo() {}
-                }
-                value class V extends I {}
-                """);
-        assertFail("compiler.err.concrete.supertype.for.value.class",
-                """
-                class ConcreteSuperType {
-                    static abstract value class V extends ConcreteSuperType {}  // Error: concrete super.
-                }
-                """);
-        assertOK(
-                """
-                value record Point(int x, int y) {}
-                """);
+        testHelper(superClassConstraints);
     }
 
     @Test
@@ -184,174 +269,312 @@ class ValueObjectCompilationTests extends CompilationTestCase {
         );
     }
 
+    private static final List<TestData> semanticsViolations = List.of(
+            new TestData(
+                    "compiler.err.cant.inherit.from.final",
+                    """
+                    value class Base {}
+                    class Subclass extends Base {}
+                    """
+            ),
+            new TestData(
+                    "compiler.err.cant.assign.val.to.var",
+                    """
+                    value class Point {
+                        int x = 10;
+                        int y;
+                        Point (int x, int y) {
+                            this.x = x; // Error, final field 'x' is already assigned to.
+                            this.y = y; // OK.
+                        }
+                    }
+                    """
+            ),
+            new TestData(
+                    "compiler.err.cant.assign.val.to.var",
+                    """
+                    value class Point {
+                        int x;
+                        int y;
+                        Point (int x, int y) {
+                            this.x = x;
+                            this.y = y;
+                        }
+                        void foo(Point p) {
+                            this.y = p.y; // Error, y is final and can't be written outside of ctor.
+                        }
+                    }
+                    """
+            ),
+            new TestData(
+                    "compiler.err.cant.assign.val.to.var",
+                    """
+                    abstract value class Point {
+                        int x;
+                        int y;
+                        Point (int x, int y) {
+                            this.x = x;
+                            this.y = y;
+                        }
+                        void foo(Point p) {
+                            this.y = p.y; // Error, y is final and can't be written outside of ctor.
+                        }
+                    }
+                    """
+            ),
+            new TestData(
+                    "compiler.err.var.might.not.have.been.initialized",
+                    """
+                    value class Point {
+                        int x;
+                        int y;
+                        Point (int x, int y) {
+                            this.x = x;
+                            // y hasn't been initialized
+                        }
+                    }
+                    """
+            ),
+            new TestData(
+                    "compiler.err.mod.not.allowed.here",
+                    """
+                    abstract value class V {
+                        synchronized void foo() {
+                         // Error, abstract value class may not declare a synchronized instance method.
+                        }
+                    }
+                    """
+            ),
+            new TestData(
+                    """
+                    abstract value class V {
+                        static synchronized void foo() {} // OK static
+                    }
+                    """
+            ),
+            new TestData(
+                    "compiler.err.mod.not.allowed.here",
+                    """
+                    value class V {
+                        synchronized void foo() {}
+                    }
+                    """
+            ),
+            new TestData(
+                    """
+                    value class V {
+                        synchronized static void soo() {} // OK static
+                    }
+                    """
+            ),
+            new TestData(
+                    "compiler.err.type.found.req",
+                    """
+                    value class V {
+                        { synchronized(this) {} }
+                    }
+                    """
+            ),
+            new TestData(
+                    "compiler.err.mod.not.allowed.here",
+                    """
+                    value record R() {
+                        synchronized void foo() { } // Error;
+                        synchronized static void soo() {} // OK.
+                    }
+                    """
+            ),
+            new TestData(
+                    "compiler.err.cant.ref.before.ctor.called",
+                    """
+                    value class V {
+                        int x;
+                        V() {
+                            foo(this); // Error.
+                            x = 10;
+                        }
+                        void foo(V v) {}
+                    }
+                    """
+            ),
+            new TestData(
+                    "compiler.err.cant.ref.before.ctor.called",
+                    """
+                    value class V {
+                        int x;
+                        V() {
+                            x = 10;
+                            foo(this); // error
+                        }
+                        void foo(V v) {}
+                    }
+                    """
+            ),
+            new TestData(
+                    "compiler.err.type.found.req",
+                    """
+                    interface I {}
+                    interface VI extends I {}
+                    class C {}
+                    value class VC<T extends VC> {
+                        void m(T t) {
+                            synchronized(t) {} // error
+                        }
+                    }
+                    """
+            ),
+            new TestData(
+                    "compiler.err.type.found.req",
+                    """
+                    interface I {}
+                    interface VI extends I {}
+                    class C {}
+                    value class VC<T extends VC> {
+                        void foo(Object o) {
+                            synchronized ((VC & I)o) {} // error
+                        }
+                    }
+                    """
+            ),
+            new TestData(
+                    // OK if the value class is abstract
+                    """
+                    interface I {}
+                    abstract value class VI implements I {}
+                    class C {}
+                    value class VC<T extends VC> {
+                        void bar(Object o) {
+                            synchronized ((VI & I)o) {} // error
+                        }
+                    }
+                    """
+            ),
+            new TestData(
+                    "compiler.err.type.found.req", // --enable-preview -source"
+                    """
+                    class V {
+                        final Integer val = Integer.valueOf(42);
+                        void test() {
+                            synchronized (val) { // error
+                            }
+                        }
+                    }
+                    """
+            ),
+            new TestData(
+                    "compiler.err.type.found.req", // --enable-preview -source"
+                    """
+                    import java.time.*;
+                    class V {
+                        final Duration val = Duration.ZERO;
+                        void test() {
+                            synchronized (val) { // warn
+                            }
+                        }
+                    }
+                    """,
+                    false // cant do local as there is an import statement
+            ),
+            new TestData(
+                    "compiler.warn.attempt.to.synchronize.on.instance.of.value.based.class", // empty options
+                    """
+                    class V {
+                        final Integer val = Integer.valueOf(42);
+                        void test() {
+                            synchronized (val) { // warn
+                            }
+                        }
+                    }
+                    """,
+                    new String[] {}
+            ),
+            new TestData(
+                    "compiler.warn.attempt.to.synchronize.on.instance.of.value.based.class", // --source
+                    """
+                    class V {
+                        final Integer val = Integer.valueOf(42);
+                        void test() {
+                            synchronized (val) { // warn
+                            }
+                        }
+                    }
+                    """,
+                    new String[] {"--source", Integer.toString(Runtime.version().feature())}
+            ),
+            new TestData(
+                    "compiler.warn.attempt.to.synchronize.on.instance.of.value.based.class", // --source
+                    """
+                    class V {
+                        final Integer val = Integer.valueOf(42);
+                        void test() {
+                            synchronized (val) { // warn
+                            }
+                        }
+                    }
+                    """,
+                    new String[] {"--source", Integer.toString(Runtime.version().feature())}
+            )
+    );
+
     @Test
     void testSemanticsViolations() {
-        assertFail("compiler.err.cant.inherit.from.final",
-                """
-                value class Base {}
-                class Subclass extends Base {}
-                """);
-        assertFail("compiler.err.cant.assign.val.to.var",
-                """
-                value class Point {
-                    int x = 10;
-                    int y;
-                    Point (int x, int y) {
-                        this.x = x; // Error, final field 'x' is already assigned to.
-                        this.y = y; // OK.
-                    }
-                }
-                """);
-        assertFail("compiler.err.cant.assign.val.to.var",
-                """
-                value class Point {
-                    int x;
-                    int y;
-                    Point (int x, int y) {
-                        this.x = x;
-                        this.y = y;
-                    }
-
-                    void foo(Point p) {
-                        this.y = p.y; // Error, y is final and can't be written outside of ctor.
-                    }
-                }
-                """);
-        assertFail("compiler.err.var.might.not.have.been.initialized",
-                """
-                value class Point {
-                    int x;
-                    int y;
-                    Point (int x, int y) {
-                        this.x = x;
-                        // y hasn't been initialized
-                    }
-                }
-                """);
-        assertFail("compiler.err.mod.not.allowed.here",
-                """
-                value class V {
-                    synchronized void foo() {}
-                }
-                """);
-        assertOK(
-                """
-                value class V {
-                    synchronized static void soo() {}
-                }
-                """);
-        assertFail("compiler.err.type.found.req",
-                """
-                value class V {
-                    { synchronized(this) {} }
-                }
-                """);
-        assertFail("compiler.err.mod.not.allowed.here",
-                """
-                value record R() {
-                    synchronized void foo() { } // Error;
-                    synchronized static void soo() {} // OK.
-                }
-                """);
-        assertFail("compiler.err.cant.ref.before.ctor.called",
-                """
-                value class V {
-                    int x;
-                    V() {
-                        foo(this); // Error.
-                        x = 10;
-                    }
-                    void foo(V v) {}
-                }
-                """);
-        assertFail("compiler.err.cant.ref.before.ctor.called",
-                """
-                value class V {
-                    int x;
-                    V() {
-                        x = 10;
-                        foo(this); // error
-                    }
-                    void foo(V v) {}
-                }
-                """);
-        assertFail("compiler.err.type.found.req",
-                """
-                interface I {}
-                interface VI extends I {}
-                class C {}
-                value class VC<T extends VC> {
-                    void m(T t) {
-                        synchronized(t) {} // error
-                    }
-                }
-                """);
-        assertFail("compiler.err.type.found.req",
-                """
-                interface I {}
-                interface VI extends I {}
-                class C {}
-                value class VC<T extends VC> {
-                    void foo(Object o) {
-                        synchronized ((VC & I)o) {} // error
-                    }
-                }
-                """);
-        assertFail("compiler.err.type.found.req",
-                """
-                interface I {}
-                abstract value class VI implements I {}
-                class C {}
-                value class VC<T extends VC> {
-                    void bar(Object o) {
-                        synchronized ((VI & I)o) {} // error
-                    }
-                }
-                """);
+        testHelper(semanticsViolations);
     }
+
+    private static final List<TestData> sealedClassesData = List.of(
+            new TestData(
+                    """
+                    abstract sealed value class SC {}
+                    value class VC extends SC {}
+                    """,
+                    false // local sealed classes are not allowed
+            ),
+            new TestData(
+                    """
+                    abstract sealed interface SI {}
+                    value class VC implements SI {}
+                    """,
+                    false // local sealed classes are not allowed
+            ),
+            new TestData(
+                    """
+                    abstract sealed class SC {}
+                    final class IC extends SC {}
+                    non-sealed class IC2 extends SC {}
+                    final class IC3 extends IC2 {}
+                    """,
+                    false
+            ),
+            new TestData(
+                    """
+                    abstract sealed interface SI {}
+                    final class IC implements SI {}
+                    non-sealed class IC2 implements SI {}
+                    final class IC3 extends IC2 {}
+                    """,
+                    false // local sealed classes are not allowed
+            ),
+            new TestData(
+                    "compiler.err.illegal.combination.of.modifiers",
+                    """
+                    abstract sealed value class SC {}
+                    non-sealed value class VC extends SC {}
+                    """,
+                    false
+            ),
+            new TestData(
+                    "compiler.err.illegal.combination.of.modifiers",
+                    """
+                    sealed value class SI {}
+                    non-sealed value class VC extends SI {}
+                    """,
+                    false
+            )
+    );
 
     @Test
     void testInteractionWithSealedClasses() {
-        assertOK(
-                """
-                abstract sealed value class SC {}
-                value class VC extends SC {}
-                """
-        );
-        assertOK(
-                """
-                abstract sealed interface SI {}
-                value class VC implements SI {}
-                """
-        );
-        assertOK(
-                """
-                abstract sealed class SC {}
-                final class IC extends SC {}
-                non-sealed class IC2 extends SC {}
-                final class IC3 extends IC2 {}
-                """
-        );
-        assertOK(
-                """
-                abstract sealed interface SI {}
-                final class IC implements SI {}
-                non-sealed class IC2 implements SI {}
-                final class IC3 extends IC2 {}
-                """
-        );
-        assertFail("compiler.err.illegal.combination.of.modifiers",
-                """
-                abstract sealed value class SC {}
-                non-sealed value class VC extends SC {}
-                """
-        );
-        assertFail("compiler.err.illegal.combination.of.modifiers",
-                """
-                sealed value class SI {}
-                non-sealed value class VC extends SI {}
-                """
-        );
+        testHelper(sealedClassesData);
     }
 
     @Test
@@ -483,45 +706,89 @@ class ValueObjectCompilationTests extends CompilationTestCase {
                 }
             }
         }
+
+        // testing experimental @Strict annotation
+        String[] previousOptions = getCompileOptions();
+        try {
+            String[] testOptions = {"--add-exports", "java.base/jdk.internal.vm.annotation=ALL-UNNAMED"};
+            setCompileOptions(testOptions);
+            for (String source : List.of(
+                    """
+                    import jdk.internal.vm.annotation.Strict;
+                    class Test {
+                        @Strict int i;
+                    }
+                    """,
+                    """
+                    import jdk.internal.vm.annotation.Strict;
+                    class Test {
+                        @Strict final int i = 0;
+                    }
+                    """
+            )) {
+                File dir = assertOK(true, source);
+                for (final File fileEntry : dir.listFiles()) {
+                    ClassFile classFile = ClassFile.read(fileEntry);
+                    for (Field field : classFile.fields) {
+                        if (!field.access_flags.is(Flags.STATIC)) {
+                            Set<String> fieldFlags = field.access_flags.getFieldFlags();
+                            Assert.check(fieldFlags.contains("ACC_STRICT"));
+                        }
+                    }
+                }
+            }
+        } finally {
+            setCompileOptions(previousOptions);
+        }
     }
 
     @Test
     void testConstruction() throws Exception {
-        for (String source : List.of(
-                """
-                value class Test {
-                    int i = 100;
-                }
-                """,
-                """
-                value class Test {
-                    int i;
-                    Test() {
-                        i = 100;
+        record Data(String src, boolean isRecord) {}
+        for (Data data : List.of(
+                new Data(
+                    """
+                    value class Test {
+                        int i = 100;
                     }
-                }
-                """,
-                """
-                value class Test {
-                    int i;
-                    Test() {
-                        i = 100;
-                        super();
+                    """, false),
+                new Data(
+                    """
+                    value class Test {
+                        int i;
+                        Test() {
+                            i = 100;
+                        }
                     }
-                }
-                """,
-                """
-                value class Test {
-                    int i;
-                    Test() {
-                        this.i = 100;
-                        super();
+                    """, false),
+                new Data(
+                    """
+                    value class Test {
+                        int i;
+                        Test() {
+                            i = 100;
+                            super();
+                        }
                     }
-                }
-                """
+                    """, false),
+                new Data(
+                    """
+                    value class Test {
+                        int i;
+                        Test() {
+                            this.i = 100;
+                            super();
+                        }
+                    }
+                    """, false),
+                new Data(
+                    """
+                    value record Test(int i) {}
+                    """, true)
         )) {
             String expectedCodeSequence = "aload_0,bipush,putfield,aload_0,invokespecial,return,";
-            File dir = assertOK(true, source);
+            String expectedCodeSequenceRecord = "aload_0,iload_1,putfield,aload_0,invokespecial,return,";
+            File dir = assertOK(true, data.src);
             for (final File fileEntry : dir.listFiles()) {
                 ClassFile classFile = ClassFile.read(fileEntry);
                 for (Method method : classFile.methods) {
@@ -531,7 +798,11 @@ class ValueObjectCompilationTests extends CompilationTestCase {
                         for (Instruction inst: code.getInstructions()) {
                             foundCodeSequence += inst.getMnemonic() + ",";
                         }
-                        Assert.check(expectedCodeSequence.equals(foundCodeSequence));
+                        if (!data.isRecord) {
+                            Assert.check(expectedCodeSequence.equals(foundCodeSequence));
+                        } else {
+                            Assert.check(expectedCodeSequenceRecord.equals(foundCodeSequence));
+                        }
                     }
                 }
             }
@@ -573,6 +844,17 @@ class ValueObjectCompilationTests extends CompilationTestCase {
                 }
                 """
         );
+        assertFail("compiler.err.cant.ref.after.ctor.called",
+                """
+                value class Test {
+                    int i;
+                    Test() {
+                        super();
+                        this.i = i;
+                    }
+                }
+                """
+        );
         assertOK(
                 """
                 class UnrelatedThisLeak {
@@ -587,6 +869,56 @@ class ValueObjectCompilationTests extends CompilationTestCase {
                 }
                 """
         );
+        assertFail("compiler.err.cant.ref.before.ctor.called",
+                """
+                value class Test {
+                    Test t = null;
+                    Runnable r = () -> { System.err.println(t); };
+                }
+                """
+        );
+    }
+
+    @Test
+    void testThisCallingConstructor() throws Exception {
+        // make sure that this() calling constructors doesn't initialize final fields
+        String source =
+                """
+                value class Test {
+                    int i;
+                    Test() {
+                        this(0);
+                    }
+
+                    Test(int i) {
+                        this.i = i;
+                    }
+                }
+                """;
+        File dir = assertOK(true, source);
+        File fileEntry = dir.listFiles()[0];
+        ClassFile classFile = ClassFile.read(fileEntry);
+        String expectedCodeSequenceThisCallingConst = "aload_0,iconst_0,invokespecial,return,";
+        String expectedCodeSequenceNonThisCallingConst = "aload_0,iload_1,putfield,aload_0,invokespecial,return,";
+        for (Method method : classFile.methods) {
+            if (method.getName(classFile.constant_pool).equals("<init>")) {
+                if (method.descriptor.getParameterCount(classFile.constant_pool) == 0) {
+                    Code_attribute code = (Code_attribute)method.attributes.get("Code");
+                    String foundCodeSequence = "";
+                    for (Instruction inst: code.getInstructions()) {
+                        foundCodeSequence += inst.getMnemonic() + ",";
+                    }
+                    Assert.check(expectedCodeSequenceThisCallingConst.equals(foundCodeSequence));
+                } else {
+                    Code_attribute code = (Code_attribute)method.attributes.get("Code");
+                    String foundCodeSequence = "";
+                    for (Instruction inst: code.getInstructions()) {
+                        foundCodeSequence += inst.getMnemonic() + ",";
+                    }
+                    Assert.check(expectedCodeSequenceNonThisCallingConst.equals(foundCodeSequence));
+                }
+            }
+        }
     }
 
     @Test
@@ -688,6 +1020,166 @@ class ValueObjectCompilationTests extends CompilationTestCase {
                 }
                 """
         );
+    }
+
+    @Test
+    void testSerializationWarnings() throws Exception {
+        String[] previousOptions = getCompileOptions();
+        try {
+            setCompileOptions(new String[] {"-Xlint:serial", "--enable-preview", "--source",
+                    Integer.toString(Runtime.version().feature())});
+            assertOK(
+                    """
+                    import java.io.*;
+                    abstract value class AVC implements Serializable {}
+                    """);
+            assertOKWithWarning("compiler.warn.serializable.value.class.without.write.replace.1",
+                    """
+                    import java.io.*;
+                    value class VC implements Serializable {
+                        private static final long serialVersionUID = 0;
+                    }
+                    """);
+            assertOK(
+                    """
+                    import java.io.*;
+                    class C implements Serializable {
+                        private static final long serialVersionUID = 0;
+                    }
+                    """);
+            assertOK(
+                    """
+                    import java.io.*;
+                    abstract value class Super implements Serializable {
+                        private static final long serialVersionUID = 0;
+                        protected Object writeReplace() throws ObjectStreamException {
+                            return null;
+                        }
+                    }
+                    value class ValueSerializable extends Super {
+                        private static final long serialVersionUID = 1;
+                    }
+                    """);
+            assertOK(
+                    """
+                    import java.io.*;
+                    abstract value class Super implements Serializable {
+                        private static final long serialVersionUID = 0;
+                        Object writeReplace() throws ObjectStreamException {
+                            return null;
+                        }
+                    }
+                    value class ValueSerializable extends Super {
+                        private static final long serialVersionUID = 1;
+                    }
+                    """);
+            assertOK(
+                    """
+                    import java.io.*;
+                    abstract value class Super implements Serializable {
+                        private static final long serialVersionUID = 0;
+                        public Object writeReplace() throws ObjectStreamException {
+                            return null;
+                        }
+                    }
+                    value class ValueSerializable extends Super {
+                        private static final long serialVersionUID = 1;
+                    }
+                    """);
+            assertOKWithWarning("compiler.warn.serializable.value.class.without.write.replace.1",
+                    """
+                    import java.io.*;
+                    abstract value class Super implements Serializable {
+                        private static final long serialVersionUID = 0;
+                        private Object writeReplace() throws ObjectStreamException {
+                            return null;
+                        }
+                    }
+                    value class ValueSerializable extends Super {
+                        private static final long serialVersionUID = 1;
+                    }
+                    """);
+            assertOKWithWarning("compiler.warn.serializable.value.class.without.write.replace.2",
+                    """
+                    import java.io.*;
+                    abstract value class Super implements Serializable {
+                        private static final long serialVersionUID = 0;
+                        private Object writeReplace() throws ObjectStreamException {
+                            return null;
+                        }
+                    }
+                    class Serializable1 extends Super {
+                        private static final long serialVersionUID = 1;
+                    }
+                    class Serializable2 extends Serializable1 {
+                        private static final long serialVersionUID = 1;
+                    }
+                    """);
+            assertOK(
+                    """
+                    import java.io.*;
+                    abstract value class Super implements Serializable {
+                        private static final long serialVersionUID = 0;
+                        Object writeReplace() throws ObjectStreamException {
+                            return null;
+                        }
+                    }
+                    class ValueSerializable extends Super {
+                        private static final long serialVersionUID = 1;
+                    }
+                    """);
+            assertOK(
+                    """
+                    import java.io.*;
+                    abstract value class Super implements Serializable {
+                        private static final long serialVersionUID = 0;
+                        public Object writeReplace() throws ObjectStreamException {
+                            return null;
+                        }
+                    }
+                    class ValueSerializable extends Super {
+                        private static final long serialVersionUID = 1;
+                    }
+                    """);
+            assertOK(
+                    """
+                    import java.io.*;
+                    abstract value class Super implements Serializable {
+                        private static final long serialVersionUID = 0;
+                        protected Object writeReplace() throws ObjectStreamException {
+                            return null;
+                        }
+                    }
+                    class ValueSerializable extends Super {
+                        private static final long serialVersionUID = 1;
+                    }
+                    """);
+            assertOK(
+                    """
+                    import java.io.*;
+                    value record ValueRecord() implements Serializable {
+                        private static final long serialVersionUID = 1;
+                    }
+                    """);
+            assertOK(
+                    // Number is a special case, no warning for identity classes extending it
+                    """
+                    class NumberSubClass extends Number {
+                        private static final long serialVersionUID = 0L;
+                        @Override
+                        public double doubleValue() { return 0; }
+                        @Override
+                        public int intValue() { return 0; }
+                        @Override
+                        public long longValue() { return 0; }
+                        @Override
+                        public float floatValue() { return 0; }
+                    }
+                    """
+            );
+        } finally {
+            setCompileOptions(previousOptions);
+        }
     }
 
     private File findClassFileOrFail(File dir, String name) {
