@@ -4,8 +4,8 @@
  *          jdk.compiler/com.sun.tools.javac.main
  *          jdk.compiler/com.sun.tools.javac.util
  * @library /tools/lib
- * @compile NullRestrictedOnMethod.jcod
- * @compile/fail/ref=NullRestrictedAttrOnlyOnFields.out -XDrawDiagnostics NullRestrictedAttrOnlyOnFields.java
+ * @compile --enable-preview -source ${jdk.version} -XDenableNullRestrictedTypes NullRestrictedOnMethod.jcod
+ * @compile/fail/ref=NullRestrictedAttrOnlyOnFields.out --enable-preview -source ${jdk.version} -XDenableNullRestrictedTypes -XDrawDiagnostics NullRestrictedAttrOnlyOnFields.java
  */
 
 public class NullRestrictedAttrOnlyOnFields {
